front_deployment.yaml
apiVersion: apps/v1  
kind: Deployment  
metadata:  
  name: angular-nginx  
  labels:  
    app: angular  
spec:  
  replicas: 1  
  selector:  
    matchLabels:  
      app: angular  
  template:  
    metadata:  
      labels:  
        app: angular  
    spec:  
      containers:  
      - name: nginx  
        image: yaghooli/frontangular:latest #registry.abriment.com/yaghooli/angular_image_tmp2 #angular_image_tmp2 #angular_image_tmp2 # angular_image_tmp:latest  # Update with your image 
        imagePullPolicy: Always 
          #imagePullSecrets:  
          # - name: my-registry-secret    
          #imagePullPolicy: IfNotPresent
        ports:  
        - containerPort: 80  
        resources:
          limits:
            cpu: 1500m
            ephemeral-storage: 3000Mi
            memory: 3000Mi
          requests:
            cpu: 1500m
            ephemeral-storage: 3000Mi
            memory: 3000Mi


      imagePullSecrets:
      - name: my-registry-secret
