webapp_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
        
  template:
    metadata:
      labels:
        app: web

    spec:
      containers:
        - name: web
          image: yaghooli/dotnetdev:latest #registry.abriment.com/yaghooli/dotnetabri2:latest #yaghooli/dotnetdev:latest #webimage4 yaghooli/dotnetdev:latest
          imagePullPolicy: Always #IfNotPresent

          ports:
          - containerPort: 80
          resources:
            limits:
              cpu: 1000m
              ephemeral-storage: 500Mi
              memory: 2000Mi
            requests:
              cpu: 500m
              ephemeral-storage: 500Mi
              memory: 1000Mi

      imagePullSecrets:
        - name: my-registry-secret
