db_service.yaml
#apiVersion: v1
  #kind: Service
  #metadata:
  # name: postgresdb
    #  labels:
    #    app: postgresdb
      #spec:
  #  ports:
    #    - port: 5432
      #  selector:
#    app: postgresdb
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgresdb
