front_service.yaml
apiVersion: v1  
kind: Service  
metadata:  
  name: angular-nginx-service  
spec:  
  type: ClusterIP  # You can use ClusterIP or NodePort as well  
  ports:  
    - port: 80  
      targetPort: 80  
  selector:  
    app: angular
