migrate_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: migrate-service
spec:
  selector:
    app: migrate
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
