ingress.yaml
apiVersion: networking.k8s.io/v1  
kind: Ingress  
metadata:  
  name: my-app-ingress  
  annotations:  
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # rules:
  #   - host: final-8926f3d808-analysis-data.apps.ir-thr-ba1.arvancaas.ir	#myapp.local  
  #     http:  
  #       paths:  
  #         - path: /  
  #           pathType: Prefix  
  #           backend:  
  #             service:  
  #               name: web-service  
  #               port:  
  #                 number: 80  
  #         - path: /front
  #           pathType: Prefix  
  #           backend:  
  #             service:  
  #               name: angular #angular-nginx-service 
  #               port:  
  #                 number: 80  

  rules:  
    - host: myfrontiii.abriment.com #front-8926f3d808-analysis-data.apps.ir-thr-ba1.arvancaas.ir
      http:  
        paths:  
          - path: /
            pathType: Prefix  
            backend:  
              service:  
                name: angular  
                port:  
                  number: 80  
    # - host: back-8926f3d808-analysis-data.apps.ir-thr-ba1.arvancaas.ir
    #   http:  
    #     paths:  
    #       - path: /  
    #         pathType: Prefix  
    #         backend:  
    #           service:  
    #             name: web-service  
    #             port:  
    #               number: 80
